<resources>
    <string name="app_name">MyGame_exercize</string>

    <string name="game_over_message">Game over!\n %1$s</string>
    <string name="start_playing_with_n_astrogo">Start playing with \n        AstroGo!</string>
    <string name="second_headline">Set Up your Game :</string>
    <string name="chcoose_settings">Choose Settings :</string>
    <string name="slow">Slow</string>
    <string name="fast">Fast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>